--- a/end.html
+++ b/end.html
@@ -9,6 +9,6 @@
                     <title>実験試料</title>
     </head>
     <body>
-            <h1>ご協力ありがとうございました。</h1>
+            <h1>回答時間。</h1>
     </body>
 </html>
