--- a/code/TypeScript/ExcaliburGame/index.html
+++ b/code/TypeScript/ExcaliburGame/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
     <!-- Include your script at the end of the body tag -->
-    <script src="excalibur-version.js"></script>
+    <script src="node_modules/excalibur/dist/excalibur.min.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
