--- a/5s/Untitled-1.html
+++ b/5s/Untitled-1.html
@@ -439,7 +439,7 @@ blockquote {
 操作をURLの登録、ブックマークの削除のみに限定した。<br>
 タイトルや画像などは、自動で取得する。</p>
 <h2 id="%E8%A6%81%E4%BB%B6">要件</h2>
-<p>すべての機能はインターンにつながっている前提で動作する。</p>
+<p>すべての機能はインターネットにつながっている前提で動作する。</p>
 <h2 id="%E6%93%8D%E4%BD%9C">操作</h2>
 <h3 id="url%E3%81%AE%E7%99%BB%E9%8C%B2">URLの登録</h3>
 <p>上部の入力欄にURLを入力し、登録を押す。</p>
@@ -518,15 +518,15 @@ URLは<code>http://</code>もしくは<code>https://</code>からはじまる。
 <h1 id="%E3%82%BD%E3%83%BC%E3%82%B9">ソース</h1>
 <h2 id="%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E6%A7%8B%E6%88%90">ファイル構成</h2>
 <ul>
-<li><code>Bookmark.java</code>
+<li><code>Bookmark.java</code>　　
 Bookmarkのデータクラス。</li>
-<li><code>Bookmarks.java</code>
+<li><code>Bookmarks.java</code><br>
 Bookmarkの制御を行うサーブレットクラス。</li>
-<li><code>BookmarksDAO.java</code>
+<li><code>BookmarksDAO.java</code><br>
 Bookmarkのデータベースにアクセスするクラス。</li>
-<li><code>bookmarks.jsp</code>
+<li><code>bookmarks.jsp</code><br>
 Bookmarkページに利用されるjspファイル。</li>
-<li><code>style.css</code>
+<li><code>style.css</code><br>
 Bookmarkページにのデザインを行うcssファイル。</li>
 </ul>
 <h2 id="bookmarkjava">Bookmark.java</h2>
