--- a/5s/Untitled-1.html
+++ b/5s/Untitled-1.html
@@ -518,7 +518,7 @@ URLは<code>http://</code>もしくは<code>https://</code>からはじまる。
 <h1 id="%E3%82%BD%E3%83%BC%E3%82%B9">ソース</h1>
 <h2 id="%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E6%A7%8B%E6%88%90">ファイル構成</h2>
 <ul>
-<li><code>Bookmark.java</code>　　
+<li><code>Bookmark.java</code><br>
 Bookmarkのデータクラス。</li>
 <li><code>Bookmarks.java</code><br>
 Bookmarkの制御を行うサーブレットクラス。</li>
