--- a/5s/Untitled-1.html
+++ b/5s/Untitled-1.html
@@ -512,9 +512,11 @@ URLは<code>http://</code>もしくは<code>https://</code>からはじまる。
 </tr>
 </tbody>
 </table>
-<p><code>ID</code>に<code>AUTOINCREMENT</code>を設定することで、IDの操作を意識させなくした。<br>
-<code>DESCRIPTION</code>は未使用。<br>
-<code>URL</code>の最大文字数は255文字。それ以上の場合は切り捨てられる。</p>
+<ul>
+<li><code>ID</code>に<code>AUTOINCREMENT</code>を設定することで、IDの操作を意識させなくした。</li>
+<li><code>DESCRIPTION</code>は未使用。</li>
+<li><code>URL</code>の最大文字数は255文字。それ以上の場合は切り捨てられる。</li>
+</ul>
 <h1 id="%E3%82%BD%E3%83%BC%E3%82%B9">ソース</h1>
 <h2 id="%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E6%A7%8B%E6%88%90">ファイル構成</h2>
 <ul>
