--- a/6s/ra-men/src/html/index.html
+++ b/6s/ra-men/src/html/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <title>津田沼ラーメンマップ</title>
 </head>
 <body>
-hello world
 <div id="root"></div>
 </body>
 </html>
