--- a/6s/ra-men2/hissyou.html
+++ b/6s/ra-men2/hissyou.html
@@ -7,22 +7,24 @@
 </head>
 
 <body>
-<header>
-  <h1>津田沼ラーメン屋さん紹介</h1>
+<header class="header">
+  <img class="logo" src="img/logo.png">
   <nav>
     <ul class="hmenu">
-      <li><a href="index.html">このサイトについて</a></li>
-      <li><a href="hissyou.html"  class="active">必勝軒</a></li>
+      <li><a href="index.html" class="active">このサイトについて</a></li>
+      <li><a href="hissyou.html">必勝軒</a></li>
       <li><a href="naritake.html">なりたけ</a></li>
       <li><a href="suzukihtml.html">鈴木さん</a></li>
       <li><a href="tsukumo.html">九十九とんこつラーメン</a></li>
     </ul>
   </nav>
 </header>
-<main><h1>必勝軒(ひっしょうけん)</h1>
+
+<main class="article"><h1>必勝軒(ひっしょうけん)</h1>
   <section><p>津田沼駅から徒歩で約5分にある、1日寝かせて熟成させた自家製麺が人気のお店です。基本の鶏・豚・魚介をバランスよく配合したスープに、ちょっと固めの自家製麺の歯応えが絶妙です。軟らかく煮込まれたチャーシューもしっかりした味で、間違いないおいしさ。盛りそばもバランススープ（月・火曜日）との相性がいい人気メニューです。曜日によって味が違うスープは、水曜日の濃厚鶏豚スープがイチオシといわれています。どの曜日のラーメンが好みか食べ比べてみるのも楽しいですね。</p></section>
   <section><img src="img/hissyou.jpg" width="640" height="480" alt=""/></section>
 </main>
+
 <footer><p class="copyright"><small>© 2019 CIT NS</small></footer>
 </body>
 </html>
