--- a/6s/ra-men2/index.html
+++ b/6s/ra-men2/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-<header>
-  <h1>津田沼ラーメン屋さん紹介</h1>
+<header class="header">
+    <img class="logo" src="img/logo.png">
   <nav>
     <ul class="hmenu">
       <li><a href="index.html" class="active">このサイトについて</a></li>
@@ -19,10 +19,12 @@
     </ul>
   </nav>
 </header>
-<main><h1>このサイトについて</h1>
+
+<main>
   <section>津田沼駅周辺には、おいしいラーメン屋さんがいっぱいあります。このサイトではその中でも人気のお店を紹介します。ぜひ一度味わってみましょう。</section>
   <section><img src="img/ra-mennya.jpg" width="640" height="480" alt=""/></section>
 </main>
+
 <footer>
   <p class="copyright"><small>© 2019 CIT NS</small>
 </footer>
