--- a/6s/ra-men2/hissyou.html
+++ b/6s/ra-men2/hissyou.html
@@ -11,8 +11,8 @@
   <img class="logo" src="img/logo.png">
   <nav>
     <ul class="hmenu">
-      <li><a href="index.html" class="active">このサイトについて</a></li>
-      <li><a href="hissyou.html">必勝軒</a></li>
+      <li><a href="index.html">このサイトについて</a></li>
+      <li><a href="hissyou.html" class="active">必勝軒</a></li>
       <li><a href="naritake.html">なりたけ</a></li>
       <li><a href="suzukihtml.html">鈴木さん</a></li>
       <li><a href="tsukumo.html">九十九とんこつラーメン</a></li>
@@ -20,9 +20,27 @@
   </nav>
 </header>
 
-<main class="article"><h1>必勝軒(ひっしょうけん)</h1>
-  <section><p>津田沼駅から徒歩で約5分にある、1日寝かせて熟成させた自家製麺が人気のお店です。基本の鶏・豚・魚介をバランスよく配合したスープに、ちょっと固めの自家製麺の歯応えが絶妙です。軟らかく煮込まれたチャーシューもしっかりした味で、間違いないおいしさ。盛りそばもバランススープ（月・火曜日）との相性がいい人気メニューです。曜日によって味が違うスープは、水曜日の濃厚鶏豚スープがイチオシといわれています。どの曜日のラーメンが好みか食べ比べてみるのも楽しいですね。</p></section>
-  <section><img src="img/hissyou.jpg" width="640" height="480" alt=""/></section>
+<main class="article">
+  <h1 class="first-color">必勝軒(ひっしょうけん)</h1>
+  <section>
+    <img class="top" src="img/hissyou.jpg" width="640" height="480" alt=""/>
+  </section>
+  <section class="card">
+    <h2 class="first-color">説明</h2>
+    <p>　津田沼駅から徒歩で約5分にある、1日寝かせて熟成させた自家製麺が人気のお店です。
+      基本の鶏・豚・魚介をバランスよく配合したスープに、ちょっと固めの自家製麺の歯応えが絶妙です。
+      軟らかく煮込まれたチャーシューもしっかりした味で、間違いないおいしさ。
+      盛りそばもバランススープ（月・火曜日）との相性がいい人気メニューです。
+      曜日によって味が違うスープは、水曜日の濃厚鶏豚スープがイチオシといわれています。
+      どの曜日のラーメンが好みか食べ比べてみるのも楽しいですね。</p>
+  </section>
+  <section class="card">
+    <h2 class="first-color">地図</h2>
+    <iframe
+      class="map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.5746120589793!2d140.01743201525906!3d35.68747498019286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228027937189c3%3A0xf803259f28689070!2z5rSl55Sw5rK85b-F5Yud6LuS!5e0!3m2!1sja!2sjp!4v1578445287213!5m2!1sja!2sjp"
+      frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  </section>
 </main>
 
 <footer><p class="copyright"><small>© 2019 CIT NS</small></footer>
