--- a/6s/ra-men2/index.html
+++ b/6s/ra-men2/index.html
@@ -20,7 +20,7 @@
   </nav>
 </header>
 
-<main>
+<main class="article">
   <section>津田沼駅周辺には、おいしいラーメン屋さんがいっぱいあります。このサイトではその中でも人気のお店を紹介します。ぜひ一度味わってみましょう。</section>
   <section><img src="img/ra-mennya.jpg" width="640" height="480" alt=""/></section>
 </main>
