--- a/6s/ra-men2/hissyou.html
+++ b/6s/ra-men2/hissyou.html
@@ -8,7 +8,9 @@
 
 <body>
 <header class="header">
-  <img class="logo" src="img/logo.png">
+  <a href="./">
+    <img class="logo" src="img/logo.png">
+  </a>
   <nav>
     <ul class="hmenu">
       <li><a href="index.html">このサイトについて</a></li>
@@ -23,7 +25,7 @@
 <main class="article">
   <h1 class="first-color">必勝軒(ひっしょうけん)</h1>
   <section>
-    <img class="top" src="img/hissyou.jpg" width="640" height="480" alt=""/>
+    <img class="top" src="img/hissyou.jpg" alt=""/>
   </section>
   <section class="card">
     <h2 class="first-color">説明</h2>
@@ -43,6 +45,8 @@
   </section>
 </main>
 
-<footer><p class="copyright"><small>© 2019 CIT NS</small></footer>
+<footer>
+  <p class="copyright"><small>© 2019 CIT NS</small></p>
+</footer>
 </body>
 </html>
