--- a/6s/ra-men2/naritake.html
+++ b/6s/ra-men2/naritake.html
@@ -7,22 +7,46 @@
 </head>
 
 <body>
-<header>
-  <h1>津田沼ラーメン屋さん紹介</h1>
+<header class="header">
+  <a href="./">
+    <img class="logo" src="img/logo.png">
+  </a>
   <nav>
     <ul class="hmenu">
       <li><a href="index.html">このサイトについて</a></li>
       <li><a href="hissyou.html">必勝軒</a></li>
-      <li><a href="naritake.html"  class="active">なりたけ</a></li>
+      <li><a href="naritake.html" class="active">なりたけ</a></li>
       <li><a href="suzukihtml.html">鈴木さん</a></li>
       <li><a href="tsukumo.html">九十九とんこつラーメン</a></li>
     </ul>
   </nav>
 </header>
-<main><h1>必勝軒(ひっしょうけん)</h1>
-  <section><p>こってりとした最上級の背脂がたくさんのったこってりスープが好評のラーメン店。パリにも支店があり、Tシャツまで販売するユニークなお店です。「醤油」と「味噌」はしっかり濃いめの味付けで、固めに茹でられたツルシコの中太麺との相性抜群。背脂は、少な目・普通・多目・ギタギタから量が選べます。味を濃いと感じたらスープで割って薄めることも可能です。豚のばら肉で作るチャーシューも口の中でとろけるほど柔らかく絶品です。濃い味ラーメンが食べたい時には絶対におすすめ！のラーメン店です。</p></section>
-  <section><img src="img/naritake.jpg" width="640" height="480" alt=""/></section>
+
+<main class="article">
+  <h1 class="first-color">なりたけ</h1>
+  <section>
+    <img class="top" src="img/naritake.jpg" alt="" />
+  </section>
+  <section class="card">
+    <h2 class="first-color">説明</h2>
+    <p>　こってりとした最上級の背脂がたくさんのったこってりスープが好評のラーメン店。
+      パリにも支店があり、Tシャツまで販売するユニークなお店です。
+      「醤油」と「味噌」はしっかり濃いめの味付けで、固めに茹でられたツルシコの中太麺との相性抜群。
+      背脂は、少な目・普通・多目・ギタギタから量が選べます。
+      味を濃いと感じたらスープで割って薄めることも可能です。
+      豚のばら肉で作るチャーシューも口の中でとろけるほど柔らかく絶品です。
+      濃い味ラーメンが食べたい時には絶対におすすめ！のラーメン店です。</p>
+  </section>
+  <section class="card">
+    <h2 class="first-color">地図</h2>
+    <iframe class="map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.5746120589793!2d140.01743201525906!3d35.68747498019286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228027937189c3%3A0xf803259f28689070!2z5rSl55Sw5rK85b-F5Yud6LuS!5e0!3m2!1sja!2sjp!4v1578445287213!5m2!1sja!2sjp"
+      frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  </section>
 </main>
-<footer><p class="copyright"><small>© 2019 CIT NS</small></footer>
+
+<footer><p class="copyright">
+  <small>© 2019 CIT NS</small></p>
+</footer>
 </body>
 </html>
