--- a/6s/ra-men2/index.html
+++ b/6s/ra-men2/index.html
@@ -8,7 +8,9 @@
 
 <body>
 <header class="header">
+  <a href="./" >
     <img class="logo" src="img/logo.png">
+  </a>
   <nav>
     <ul class="hmenu">
       <li><a href="index.html" class="active">このサイトについて</a></li>
@@ -26,7 +28,7 @@
 </main>
 
 <footer>
-  <p class="copyright"><small>© 2019 CIT NS</small>
+  <p class="copyright"><small>© 2019 CIT NS</small></p>
 </footer>
 </body>
 </html>
