--- a/6s/ra-men2/suzukihtml.html
+++ b/6s/ra-men2/suzukihtml.html
@@ -7,22 +7,44 @@
 </head>
 
 <body>
-<header>
-  <h1>津田沼ラーメン屋さん紹介</h1>
+<header class="header">
+  <a href="./">
+    <img class="logo" src="img/logo.png">
+  </a>
   <nav>
-   <ul class="hmenu">
+    <ul class="hmenu">
       <li><a href="index.html">このサイトについて</a></li>
       <li><a href="hissyou.html">必勝軒</a></li>
       <li><a href="naritake.html">なりたけ</a></li>
-      <li><a href="suzukihtml.html"  class="active">鈴木さん</a></li>
+      <li><a href="suzukihtml.html" class="active">鈴木さん</a></li>
       <li><a href="tsukumo.html">九十九とんこつラーメン</a></li>
     </ul>
   </nav>
 </header>
-<main><h1>魚骨ラーメン 鈴木さん</h1>
-  <section><p>JR津田沼駅北口より徒歩で約5分にある、個性派でしっかりおいしいラーメンで知られるお店です。秋刀魚の混ぜそばや梅昆布茶つけラーメン（夏季限定）など、他の店ではなかなか出会えないラーメンが勢揃い。定番メニューの鈴木さんラーメンは、腰の強い細麺に魚骨醤油のやや黒っぽいスープ。魚の骨のダシが利いてほのかな苦みがあり、あっさり味にまとまっています。店主の試行錯誤が垣間見られるラーメンを食べに訪れてみてはいかがでしょう。 </p></section>
-  <section><img src="img/suzuki.jpg" width="640" height="480" alt=""/></section>
+
+<main class="article">
+  <h1 class="first-color">魚骨ラーメン 鈴木さん</h1>
+  <section>
+    <img class="top" src="img/suzuki.jpg" alt="" />
+  </section>
+  <section class="card">
+    <h2 class="first-color">説明</h2>
+    <p>　JR津田沼駅北口より徒歩で約5分にある、個性派でしっかりおいしいラーメンで知られるお店です。
+      秋刀魚の混ぜそばや梅昆布茶つけラーメン（夏季限定）など、他の店ではなかなか出会えないラーメンが勢揃い。
+      定番メニューの鈴木さんラーメンは、腰の強い細麺に魚骨醤油のやや黒っぽいスープ。
+      魚の骨のダシが利いてほのかな苦みがあり、あっさり味にまとまっています。
+      店主の試行錯誤が垣間見られるラーメンを食べに訪れてみてはいかがでしょう。</p>
+  </section>
+  <section class="card">
+    <h2 class="first-color">地図</h2>
+    <iframe class="map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.5746120589793!2d140.01743201525906!3d35.68747498019286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228027937189c3%3A0xf803259f28689070!2z5rSl55Sw5rK85b-F5Yud6LuS!5e0!3m2!1sja!2sjp!4v1578445287213!5m2!1sja!2sjp"
+      frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  </section>
 </main>
-<footer><p class="copyright"><small>© 2019 CIT NS</small></footer>
+
+<footer>
+  <p class="copyright"><small>© 2019 CIT NS</small></p>
+  </footer>
 </body>
 </html>
