レスポンシブ、地図対応

--- a/6s/ra-men2/index.html
+++ b/6s/ra-men2/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>津田沼ラーメン屋さん紹介</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -23,8 +24,14 @@
 </header>
 
 <main class="article">
-  <section>津田沼駅周辺には、おいしいラーメン屋さんがいっぱいあります。このサイトではその中でも人気のお店を紹介します。ぜひ一度味わってみましょう。</section>
-  <section><img src="img/ra-mennya.jpg" width="640" height="480" alt=""/></section>
+  <section>
+    <p>
+    津田沼駅周辺には、おいしいラーメン屋さんがいっぱいあります。このサイトではその中でも人気のお店を紹介します。ぜひ一度味わってみましょう。
+    </p>
+  </section>
+  <section>
+    <img class="top" src="img/ra-mennya.jpg" alt=""/>
+  </section>
 </main>
 
 <footer>
