--- a/6s/ra-men2/tsukumo.html
+++ b/6s/ra-men2/tsukumo.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>津田沼ラーメン屋さん紹介</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -37,8 +38,9 @@
   </section>
   <section class="card">
     <h2 class="first-color">地図</h2>
-    <iframe class="map"
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.5746120589793!2d140.01743201525906!3d35.68747498019286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228027937189c3%3A0xf803259f28689070!2z5rSl55Sw5rK85b-F5Yud6LuS!5e0!3m2!1sja!2sjp!4v1578445287213!5m2!1sja!2sjp"
+    <iframe
+      class="map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3129.9712143818565!2d140.02065963666533!3d35.69301601386636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228021403a15b3%3A0x5c44ebbe44eeee2!2z5Lmd5Y2B5Lmd44Op44O844Oh44OzIOa0peeUsOayvOW6lw!5e0!3m2!1sja!2sjp!4v1578448495165!5m2!1sja!2sjp"
       frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   </section>
 </main>
