--- a/6s/ra-men2/suzukihtml.html
+++ b/6s/ra-men2/suzukihtml.html
@@ -37,8 +37,9 @@
   </section>
   <section class="card">
     <h2 class="first-color">地図</h2>
-    <iframe class="map"
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.5746120589793!2d140.01743201525906!3d35.68747498019286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228027937189c3%3A0xf803259f28689070!2z5rSl55Sw5rK85b-F5Yud6LuS!5e0!3m2!1sja!2sjp!4v1578445287213!5m2!1sja!2sjp"
+    <iframe
+      class="map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d202.5188739404613!2d140.02312160777956!3d35.69418566423757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6022802177c7f70b%3A0xbc8330d35eab2f0e!2z6a2a6aqo44KJ44O844KB44KT6Yi05pyo44GV44KT!5e0!3m2!1sja!2sjp!4v1578448415403!5m2!1sja!2sjp"
       frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   </section>
 </main>
