サイズ、IEバグ修正

--- a/6s/ra-men2/hissyou.html
+++ b/6s/ra-men2/hissyou.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
 
-<main class="article">
+<div class="article">
   <h1 class="first-color">必勝軒(ひっしょうけん)</h1>
   <section>
     <img class="top" src="img/hissyou.jpg" alt=""/>
@@ -44,7 +44,7 @@
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.5746120589793!2d140.01743201525906!3d35.68747498019286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228027937189c3%3A0xf803259f28689070!2z5rSl55Sw5rK85b-F5Yud6LuS!5e0!3m2!1sja!2sjp!4v1578445287213!5m2!1sja!2sjp"
       frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   </section>
-</main>
+</div>
 
 <footer>
   <p class="copyright"><small>© 2019 CIT NS</small></p>
