--- a/6s/ra-men2/index.html
+++ b/6s/ra-men2/index.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
 
-<main class="article">
+<div class="article">
   <section>
     <p>
     津田沼駅周辺には、おいしいラーメン屋さんがいっぱいあります。このサイトではその中でも人気のお店を紹介します。ぜひ一度味わってみましょう。
@@ -32,7 +32,7 @@
   <section>
     <img class="top" src="img/ra-mennya.jpg" alt=""/>
   </section>
-</main>
+</div>
 
 <footer>
   <p class="copyright"><small>© 2019 CIT NS</small></p>
