--- a/6s/ra-men2/tsukumo.html
+++ b/6s/ra-men2/tsukumo.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
 
-<main class="article">
+<div class="article">
   <h1 class="first-color">九十九とんこつラーメン</h1>
   <section>
     <img class="top" src="img/tsukumo.jpg" alt="" />
