--- a/6s/ra-men2/naritake.html
+++ b/6s/ra-men2/naritake.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
 
-<main class="article">
+<div class="article">
   <h1 class="first-color">なりたけ</h1>
   <section>
     <img class="top" src="img/naritake.jpg" alt="" />
@@ -45,7 +45,7 @@
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51847.701769316314!2d140.01153276280806!3d35.68977046137049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60228020ff9dc671%3A0xc7e9861ca72bdc70!2z44Gq44KK44Gf44GRIOa0peeUsOayvOW6lw!5e0!3m2!1sja!2sjp!4v1578448331712!5m2!1sja!2sjp"
       frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   </section>
-</main>
+</div>
 
 <footer><p class="copyright">
   <small>© 2019 CIT NS</small></p>
