--- a/6s/ra-men2/hissyou.html
+++ b/6s/ra-men2/hissyou.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <title>津田沼ラーメン屋さん紹介</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="icon" href="favicon.ico">
 <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <header class="header">
-  <a href="./">
+  <a href="./index.html">
     <img class="logo" src="img/logo.png">
   </a>
   <nav>
