--- a/6s/ra-men2/hissyou.html
+++ b/6s/ra-men2/hissyou.html
@@ -18,7 +18,7 @@
       <li><a href="index.html">このサイトについて</a></li>
       <li><a href="hissyou.html" class="active">必勝軒</a></li>
       <li><a href="naritake.html">なりたけ</a></li>
-      <li><a href="suzukihtml.html">鈴木さん</a></li>
+      <li><a href="suzuki.html">鈴木さん</a></li>
       <li><a href="tsukumo.html">九十九とんこつラーメン</a></li>
     </ul>
   </nav>
