--- a/6s/ra-men2/index.html
+++ b/6s/ra-men2/index.html
@@ -18,7 +18,7 @@
       <li><a href="index.html" class="active">このサイトについて</a></li>
       <li><a href="hissyou.html">必勝軒</a></li>
       <li><a href="naritake.html">なりたけ</a></li>
-      <li><a href="suzukihtml.html">鈴木さん</a></li>
+      <li><a href="suzuki.html">鈴木さん</a></li>
       <li><a href="tsukumo.html">九十九とんこつラーメン</a></li>
     </ul>
   </nav>
@@ -32,6 +32,31 @@
   </section>
   <section>
     <img class="top" src="img/top.jpg" alt=""/>
+  </section>
+  <section>
+    <div class="tile-wrapper">
+      <div class="tile">
+          <img class="top" src="img/hissyou.jpg" alt=""/>
+          <h2 class="shop-name">必勝軒</h2>
+          <a href="./hissyou.html"></a>
+      </div>
+      <div class="tile">
+        <img class="top" src="img/naritake.jpg" alt=""/>
+        <h2 class="shop-name">なりたけ</h2>
+        <a href="./naritake.html"></a>
+      </div>
+      <div class="tile">
+        <img class="top" src="img/suzuki.jpg" alt=""/>
+        <h2 class="shop-name">鈴木さん</h2>
+        <a href="./suzuki.html"></a>
+      </div>
+      <div class="tile">
+        <img class="top" src="img/tsukumo.jpg" alt=""/>
+        <h2 class="shop-name">九十九とんこつラーメン</h2>
+        <a href="./tsukumo.html"></a>
+      </div>
+
+    </div>
   </section>
 </div>
 
